add apollo server & client to project use graphql to get items of todo list from apollo backend, reformat code & rename some values

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vuejs3</title>
+    <title>SDAF ToDo List</title>
     <link rel="stylesheet" href="/dist/main.css">
   </head>
   <body>
